# mira

./: .env.example  .gitignore  INSTALL.md  README.md  pyproject.toml
demo/: test_simple.py
demo/eval/: eval_gsm8k.sh  eval_gsm8k.yaml
mira/: __init__.py  args.py  inference.py  oai_protocol.py  openrouter.py  types.py  utils.py
tests/: test_proba.py  test_simple.py  test_struct_output.py  test_tool.py
tests/eval/: eval_aime24.yaml
